grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.using_declaration,
      $.var_declaration,
      $.set_statement,
      $.function_definition,
      $.type_definition,
      $._expression,
    ),

    // ─────────────────────────────────────────────
    // Comments
    // ─────────────────────────────────────────────

    using_declaration: $ => seq(
      'using',
      '{',
      $.module_path,
      '}',
    ),

    module_path: $ => seq(
      '/',
      repeat1(seq(
        /[a-zA-Z@][a-zA-Z0-9.\-_]*/,
        optional('/'),
      )),
    ),

    // ─────────────────────────────────────────────
    // Variable declarations: var Name:type = value
    // ─────────────────────────────────────────────

    var_declaration: $ => seq(
      'var',
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq('=', field('value', $._expression))),
    ),

    // ─────────────────────────────────────────────
    // Set statements: set target op value
    // ─────────────────────────────────────────────

    function_definition: $ => seq(
      field('name', $.identifier),
      optional(field('specifiers', $.specifier_list)),
      '(',
      optional(field('parameters', $.parameter_list)),
      ')',
      optional(field('effect_specifiers', $.specifier_list)),
      ':',
      field('return_type', $._type),
      '=',
      field('body', $._function_body),
    ),

    // Function body: indented block, brace block, or inline expression
    _function_body: $ => choice(
      $.brace_block,
      $.indented_block,    // INDENT stmts DEDENT (after '=')
      $._expression,       // inline expression on same line
    ),

    // ─────────────────────────────────────────────
    // Type definitions (via :=)
    //   Name<specs>? := class/struct/enum/interface/module/expr
    // ─────────────────────────────────────────────

    type_definition: $ => seq(
      field('name', $.identifier),
      optional(field('specifiers', $.specifier_list)),
      ':=',
      field('value', choice(
        $.class_definition,
        $.struct_definition,
        $.enum_definition,
        $.interface_definition,
        $.module_definition,
        $._expression,
      )),
    ),

    // ─────────────────────────────────────────────
    // Class / Struct / Enum / Interface / Module
    // ─────────────────────────────────────────────

    class_definition: $ => seq(
      'class',
      optional(field('specifiers', $.specifier_list)),
      optional(seq('(', field('base', $.identifier), ')')),
      $._type_body,
    ),

    module_definition: $ => seq(
      'module',
      $._type_body,
    ),

    // Type body: ':' INDENT members DEDENT  OR  '{ members }'
    _type_body: $ => choice(
      seq(':', $._indent, repeat($._class_member), $._dedent),
      seq('{', repeat($._class_member), '}'),
    ),

    field_declaration: $ => seq(
      field('name', $.identifier),
      optional(field('specifiers', $.specifier_list)),
      ':',
      field('type', $._type),
      optional(seq('=', field('default', $._expression))),
    ),

    specifier_list: $ => repeat1($.specifier),

    specifier: $ => seq(
      token.immediate('<'),
      field('name', alias($._specifier_name, $.specifier_name)),
      optional(seq('{', field('value', $.identifier), '}')),
      '>',
    ),

    _specifier_name: $ => choice(
      'abstract', 'computes', 'constructor', 'private', 'public', 'protected',
      'final', 'decides', 'inline', 'native', 'override', 'suspends', 'transacts',
      'internal', 'reads', 'writes', 'allocates', 'scoped', 'converges',
      'castable', 'concrete', 'unique', 'final_super', 'open', 'closed',
      'native_callable', 'module_scoped_var_weak_map_key', 'epic_internal',
      'persistable',
    ),

    // ─────────────────────────────────────────────
    // Parameter lists
    // ─────────────────────────────────────────────

    parameter_list: $ => seq(
      $._parameter,
      repeat(seq(',', $._parameter)),
    ),

    _parameter: $ => choice(
      $.named_parameter,
      $.positional_parameter,
      $.tuple_parameter,
    ),

    positional_parameter: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    _type: $ => choice(
      $.identifier,
      $.qualified_type,
      $.optional_type,
      $.array_type,
      $.map_type,
      $.function_type,
      $.tuple_type,
      // built-in type keywords (without 'tuple'/'type' which have special forms)
      alias(choice(
        'int', 'float', 'string', 'logic', 'char', 'any', 'void',
        'comparable', 'rational',
      ), $.builtin_type),
    ),

    optional_type: $ => seq('?', $._type),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.escape_sequence,
        $.string_interpolation,
      )),
      '"',
    ),

    string_content: $ => token.immediate(/[^"\\{]+/),

    path_literal: $ => token(
      seq(
        '/',
        /[a-zA-Z@][a-zA-Z0-9.\-_]*/,
        repeat(seq('/', /[a-zA-Z_][a-zA-Z0-9_]*/)),
      ),
    ),

    // ─────────────────────────────────────────────
    // Expressions
    // ─────────────────────────────────────────────

    _expression: $ => choice(
      $._literal,
      $.identifier,
      $.self_expression,
      $.wildcard,
      $.parenthesized_expression,
      $.tuple_expression,
      $.unary_expression,
      $.binary_expression,
      $.range_expression,
      $.query_expression,
      $.call_expression,
      $.failable_call_expression,
      $.member_access,
      $.index_expression,
      $.object_construction,
      $.array_literal,
      $.logic_literal,
      $.option_expression,
      $.if_expression,
      $.for_expression,
      $.loop_expression,
      $.block_expression,
      $.case_expression,
      $.sync_expression,
      $.race_expression,
      $.branch_expression,
      $.spawn_expression,
      $.when_expression,
      $.break_expression,
      $.return_expression,
      $.yield_expression,
    ),

    binary_expression: $ => choice(
      prec.left(PREC.MULT, seq(
        field('left', $._expression),
        field('operator', choice('*', '/')),
        field('right', $._expression),
      )),
      prec.left(PREC.ADD, seq(
        field('left', $._expression),
        field('operator', choice('+', '-')),
        field('right', $._expression),
      )),
      prec.right(PREC.COMPARE, seq(
        field('left', $._expression),
        field('operator', choice('=', '<>', '<', '<=', '>', '>=')),
        field('right', $._expression),
      )),
      prec.left(PREC.AND, seq(
        field('left', $._expression),
        field('operator', 'and'),
        field('right', $._expression),
      )),
      prec.left(PREC.OR, seq(
        field('left', $._expression),
        field('operator', 'or'),
        field('right', $._expression),
      )),
    ),

    call_expression: $ => prec.left(PREC.CALL, seq(
      field('function', $._expression),
      '(',
      optional(field('arguments', $.argument_list)),
      ')',
    )),

    object_construction: $ => prec.left(PREC.CALL, seq(
      field('type', $._expression),
      '{',
      optional(field('fields', $.field_initializer_list)),
      '}',
    )),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});
